...

    return Scaffold(
      backgroundColor: AppColors.backgroundLight,
      appBar: AppBar(
        backgroundColor: AppColors.backgroundDark,
        foregroundColor: AppColors.textPurple,
        title: const Text('Minha Agenda'),
        actions: [
          IconButton(
            icon: const Icon(Icons.exit_to_app),
            tooltip: 'Sair da Conta',
            onPressed: () {
              context.read<AuthProvider>().login('logout', 'logout');
...
